# modbus-rtu-client

./: README.md  pyproject.toml
demos/: dam0400_client.py
src/modbus_rtu_client/: __init__.py  base.py  cmd.py
tests/: test_modbus.py
